<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:fitsSystemWindows="true">

    <!-- Username Label -->
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
        <EditText android:id="@+id/input_email"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPersonName"
                  android:hint="@string/prompt_user" />
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp">
        <EditText android:id="@+id/input_password1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:hint="@string/prompt_password"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp">
        <EditText android:id="@+id/input_password2"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:hint="@string/password_confirm"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Username Label -->
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp">
        <EditText android:id="@+id/input_name"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/Name" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp">
        <TextView
                android:id="@+id/txt_promp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fakhz_prompt"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"/>
        <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/txt_promp"
                />

    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp">
        <TextView
                android:id="@+id/txt_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"/>
        <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/txt_gender"
                />
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp">
        <ImageView
                android:id="@+id/pic"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:src="@android:drawable/sym_def_app_icon"

                />
        <Button
                android:id="@+id/btn_upload"
                android:text="@string/upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/pic"
                android:layout_marginTop="10dp"

                />
    </RelativeLayout>

    <!-- Username Label -->

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="12dp"
            android:text="@string/update"/>



</LinearLayout>
