<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
       android:layout_height="match_parent"
        tools:context="com.o2runsystems.dev2.kh_fam.ShowActivity"
        >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarShow"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#ffffff">
    </android.support.v7.widget.Toolbar>


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/avatar"
        app:civ_border_width="0dp"
        android:id="@+id/avater_showactiviy"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_below="@id/toolbarShow"
        />



<TextView
        android:id="@+id/txt1"
        android:text="@string/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/avater_showactiviy"
        android:layout_marginStart="10dp"
    android:layout_marginTop="13dp"
        android:layout_marginBottom="5dp"
        android:textSize="16dp"
        android:textStyle="bold"
    android:layout_below="@id/toolbarShow"
        />
<TextView
        android:id="@+id/txt2"
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/txt1"
        android:layout_marginStart="5dp"
    android:layout_alignParentEnd="true"
    android:textAlignment="textEnd"
        />
<TextView
        android:id="@+id/txt3"
        android:text="@string/titel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/avater_showactiviy"
        android:layout_below="@id/txt1"
        android:layout_marginStart="10dp"

        android:textStyle="bold"

        />
<TextView
        android:id="@+id/txt4"
        android:text="@string/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/avater_showactiviy"
        android:layout_below="@id/txt3"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"

        />
<ImageView
        android:id="@+id/imgbody_showactiviy"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/news"
        android:layout_below="@id/txt4"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        />

</RelativeLayout>

